[package]
name = "get-mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.17.0"
bitcoin = "0.29.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc","raw_value"] }
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
hex = "0.4.3"
hyper = { version = "0.14.28", default-features = false, features = ["client"]}
base64 = "0.21.5"

