[package]
name = "get-mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc","raw_value"] }
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
hex = "0.4.3"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
base64 = "0.21.5"
http-body-util = "0.1"
bytes = "1"


